Update Settings, Remove hardcoded configuration

--- a/OCMS/Properties/Settings.settings
+++ b/OCMS/Properties/Settings.settings
@@ -3,18 +3,21 @@
   <Profiles />
   <Settings>
     <Setting Name="ServerName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">laptop124\devteam</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DatabaseName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">OCMS</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="User" Type="System.String" Scope="User">
-      <Value Profile="(Default)">mpiuser</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Password" Type="System.String" Scope="User">
-      <Value Profile="(Default)">itdbtw3n+y12</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Company" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
