Modify source code, encrypt specific data

--- a/OCMS/App.config
+++ b/OCMS/App.config
@@ -1,9 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OCMS.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="OCMS.Properties.Settings.OCMSConnectionString" connectionString="Data Source=LAPTOP110\DEVOPS;Initial Catalog=OCMS;User ID=sa;Password=KGkristineguardian"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <userSettings>
+        <OCMS.Properties.Settings>
+            <setting name="ServerName" serializeAs="String">
+                <value>laptop124\devteam</value>
+            </setting>
+            <setting name="DatabaseName" serializeAs="String">
+                <value>OCMS</value>
+            </setting>
+            <setting name="User" serializeAs="String">
+                <value>mpiuser</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>itdbtw3n+y12</value>
+            </setting>
+            <setting name="Company" serializeAs="String">
+                <value />
+            </setting>
+        </OCMS.Properties.Settings>
+    </userSettings>
+  <appSettings>
+    <add key="SecurityKey" value="utf^*)#17272HYT"/>
+  </appSettings>
 </configuration>
