--- a/OCMS/App.config
+++ b/OCMS/App.config
@@ -26,6 +26,9 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Version" serializeAs="String">
+                <value />
+            </setting>
         </OCMS.Properties.Settings>
     </userSettings>
 </configuration>
